# lviv_basecamp

./: CMakeLists.txt  Makefile  README.md  main.cpp  search.lib
.github/: CODEOWNERS
.github/workflows/: build-linux.yml  build-windows.yml
include/: SearchSettings.h  search.h
src/: SearchSettings.cpp  search.cpp
